category controlleriga view yaratildi

--- a/BulkyBooks/Views/Category/Index.cshtml
+++ b/BulkyBooks/Views/Category/Index.cshtml
@@ -1,7 +1,41 @@
-﻿
+﻿@model IEnumerable<Category>
 @{
     ViewData["Title"] = "Category Index";
 }
+<div class="p-3">
+    <div class="row pt-4">
+        <div class="col-6">
+            <h2 class="text-primary">
+                Category list
+            </h2>
+        </div>
+        <div class="col-6 text-end">
+            <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
+                <i class="bi bi-plus-circle"></i> &nbsp; Create new category
+            </a>
+        </div>
+    </div>
+    <br /><br />
 
-<h1>Index Category</h1>
-
+<table class="table table-bordered table-striped" style="width:100%">
+    <thead>
+        <tr>
+            <th>Category name</th>
+            <th>Display order</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach(var obj in Model)
+        {
+            <tr>
+                <td width="50%">
+                    @obj.Name
+                </td>
+                <td width="30%">
+                    @obj.DisplayOrder
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
+</div>
