validatsiya qo'shildi

--- a/BulkyBooks/Views/Category/Create.cshtml
+++ b/BulkyBooks/Views/Category/Create.cshtml
@@ -6,6 +6,8 @@
             <h2 class="text-primary">Create category</h2>
             <hr />
         </div>
+        @*hamma xatoliklarni chiqarib beradi*@
+        <div asp-validation-summary="All"></div>
         <div class="mb-3">
             <label asp-for="Name"></label>
             <input asp-for="Name" class="form-control" />
