anti forgery qo'shildi, postmanda ishlay ozgina murakkablashishi mumkin

--- a/BulkyBooks/Views/Category/Create.cshtml
+++ b/BulkyBooks/Views/Category/Create.cshtml
@@ -24,6 +24,9 @@
         </a>
     </div>
 </form>
+@*validatsiya model talabidan kelib chiqib client tarafda bo'ladi, 
+    agar minimal talab bajarilsa back-end logikasi bo'yicha ishlaydi
+*@
 @section Scripts
 {
     @{
