--- a/BulkyBooks/Views/Category/Edit.cshtml
+++ b/BulkyBooks/Views/Category/Edit.cshtml
@@ -6,8 +6,6 @@
             <h2 class="text-primary">Create category</h2>
             <hr />
         </div>
-        @*hamma xatoliklarni chiqarib beradi*@
-        @*<div asp-validation-summary="All"></div>*@
         <div class="mb-3">
             <label asp-for="Name"></label>
             <input asp-for="Name" class="form-control" />
@@ -18,15 +16,12 @@
             <input asp-for="DisplayOrder" class="form-control" />
             <span asp-validation-for="DisplayOrder" class="text-danger"></span>
         </div>
-        <button type="submit" class="btn btn-primary" style="width:150px">Create</button>
+        <button type="submit" class="btn btn-primary" style="width:150px">Update</button>
         <a asp-controller="Category" asp-action="Index" class="btn btn-secondary" style="width:150px">
             Back to List
         </a>
     </div>
 </form>
-@*validatsiya model talabidan kelib chiqib client tarafda bo'ladi, 
-    agar minimal talab bajarilsa back-end logikasi bo'yicha ishlaydi
-*@
 @section Scripts
 {
     @{
