--- a/BulkyBooks/Views/Category/Index.cshtml
+++ b/BulkyBooks/Views/Category/Index.cshtml
@@ -22,6 +22,7 @@
         <tr>
             <th>Category name</th>
             <th>Display order</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -33,6 +34,11 @@
                 </td>
                 <td width="30%">
                     @obj.DisplayOrder
+                </td>
+                <td>
+                    <div class="w-75 btn-group" role="group">
+                        <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2"> <i class="bi bi-pencil-square"></i> Edit</a>
+                    </div>
                 </td>
             </tr>
         }
