--- a/BulkyBooks/Views/Category/Index.cshtml
+++ b/BulkyBooks/Views/Category/Index.cshtml
@@ -38,6 +38,7 @@
                 <td>
                     <div class="w-75 btn-group" role="group">
                         <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2"> <i class="bi bi-pencil-square"></i> Edit</a>
+                        <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-warning mx-2"> <i class="bi bi-trash3"></i> Delete</a>
                     </div>
                 </td>
             </tr>
