--- a/BulkyBooks/Views/Category/Index.cshtml
+++ b/BulkyBooks/Views/Category/Index.cshtml
@@ -2,10 +2,7 @@
 @{
     ViewData["Title"] = "Category Index";
 }
-@if (TempData["success"] != null)
-{
-    <h2>@TempData["success"]</h2>
-}
+<partial name="_Notification" />
 <div class="p-3">
     <div class="row pt-4">
         <div class="col-6">
