--- a/BulkyBooks/Views/Shared/_Notification.cshtml
+++ b/BulkyBooks/Views/Shared/_Notification.cshtml
@@ -1,4 +1,8 @@
 ﻿@if (TempData["success"] != null)
 {
-    <h2>@TempData["success"]</h2>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script type="text/javascript">
+        toastr.success('@TempData["success"]')
+    </script>
 }
