--- a/firstdmo/Views/_ViewImports.cshtml
+++ b/firstdmo/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using firstdmo
-@using firstdmo.Models
+﻿@using firstdemo
+@using firstdemo.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
