navbar o'zgardi, juda muhim o'zgarish yo'q

--- a/firstdmo/Views/Shared/_Layout.cshtml
+++ b/firstdmo/Views/Shared/_Layout.cshtml
@@ -27,6 +27,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Products</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Information" asp-action="Privacy">Information</a>
+                        </li>
                     </ul>
                 </div>
             </div>
