company uchun forma yaratildi

--- a/firstdmo/Views/Home/Index.cshtml
+++ b/firstdmo/Views/Home/Index.cshtml
@@ -6,3 +6,14 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+<div class="bordered">
+    <form method='post'>
+        <label>Name:</label><br />
+        <input name='Name' /><br />
+        <label>Address:</label><br />
+        <input name='Address' /><br />
+        <label>Contact:</label><br />
+        <input name='Contact' /><br />
+        <input type='submit' value='Send' />
+    </form>
+</div>
